--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -51,8 +51,8 @@
             a{
                 display: flex;
                 background:#c2c8cc;
-                font-size: .9rem;
-                padding: 10px;
+                font-size: 1.5rem;
+                padding: 20px;
                 justify-content: center;
                 align-items: center;
                 text-decoration: none;
@@ -66,7 +66,7 @@
         .location{
             align-self: center;
             position: absolute;
-            bottom: 50px;
+            bottom: 5px;
 
             .address{
                 color: #7a8d99;
@@ -92,11 +92,10 @@
         align-items: center;
         flex-direction: column;
         background: #ad9103; /* Old browsers */
-        background: -moz-linear-gradient(left, #ad9103 0%, #ddbc33 71%, #dbc983 76%, #dbc983 92%, #ad9103 98%, #ad9103 98%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(left, #ad9103 0%,#ddbc33 71%,#dbc983 76%,#dbc983 92%,#ad9103 98%,#ad9103 98%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to right, #ad9103 0%,#ddbc33 71%,#dbc983 76%,#dbc983 92%,#ad9103 98%,#ad9103 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        background: -moz-linear-gradient(left, #ad9103 0%, #ddbc33 30%, #dbc983 76%, #dbc983 92%, #ad9103 98%, #ad9103 98%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(left, #ad9103 0%,#ddbc33 30%,#dbc983 76%,#dbc983 92%,#ad9103 98%,#ad9103 98%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to right, #ad9103 0%,#ddbc33 30%,#dbc983 76%,#dbc983 92%,#ad9103 98%,#ad9103 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
         overflow: hidden;
-        margin-bottom: 100px;
         .status{
             display: inline-block;
             padding: 10px 20px;
@@ -137,4 +136,133 @@
         // }
         
     }
+}
+#information{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100vh;
+    .restaurant-image{
+        overflow: hidden;
+        img{
+        width: 100%;
+        }
+    }
+    .info{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 100px 50px;
+        h2{
+            font-size: 3rem;
+            font-weight: 600;
+            margin-bottom: 20px;
+        }
+        .paragraphs{
+            display: grid;
+            grid-template-columns: 50% 50%;
+            grid-gap: 20px;
+            line-height: 2;
+            color: #7a8d99;
+            font-size: 1.1rem;
+            margin-bottom: 2rem;
+        }
+        .about-link{
+            font-size: 1.8rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
+            color: black;
+            font-weight: 600;
+
+            span{
+                margin-right: 20px;
+            }
+            .circle-right{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 40px;
+                width: 40px;
+                background: #ad9103; /* Old browsers */
+                background: -moz-radial-gradient(center, ellipse cover, #ad9103 0%, #dbc983 60%); /* FF3.6-15 */
+                background: -webkit-radial-gradient(center, ellipse cover, #ad9103 0%,#dbc983 60%); /* Chrome10-25,Safari5.1-6 */
+                background: radial-gradient(ellipse at center, #ad9103 0%,#dbc983 60%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+                border-radius: 50%;
+                
+                .fas{
+                    color: white;
+                    font-size: 1.3rem;
+                }
+            }
+        }
+    }
+}
+#food-preview{
+    background: #f4f8fb;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    .button-rounded{
+       background: #ad9103; 
+       color: white;
+       display: inline-block;
+       padding: 15px;
+       border-radius: 30px;
+       margin: 0 auto;
+    }
+    .food-slider{
+        width: 100%;
+        max-width: 1500px;
+        .slide{
+            width: 20%;
+            position: relative;
+            height: 500px;
+            .background{
+                background: white;
+                top: 0;
+                bottom: 0;
+                height: 100%;
+                width: 100%;
+                z-index: 1;
+                position: absolute;
+            }
+            .content{
+                position: absolute;
+                z-index: 2;
+                padding: 20px;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                .food-title{
+                    color: #ad9103;
+                    font-size: 2rem;
+                    font-weight: 600;
+                    margin-bottom: 3rem;
+                }
+                .food-description{
+                    font-size: .8rem;
+                    font-weight: 400;
+                    margin-bottom: 3rem;
+                    line-height: 1.8;
+                    color: #7a8d99;
+                }
+                img{
+                    width: 95%;
+                    max-width: 350px;
+                }
+            }
+        }
+    }
+    
+    h2{
+        font-size: 3rem;
+        font-weight: 600;
+        margin-bottom: 20px;
+        text-align: center;
+        }
 }
