--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -67,6 +67,7 @@
             align-self: center;
             position: absolute;
             bottom: 5px;
+            margin-bottom: 50px;
 
             .address{
                 color: #7a8d99;
@@ -157,6 +158,7 @@
             font-size: 3rem;
             font-weight: 600;
             margin-bottom: 20px;
+
         }
         .paragraphs{
             display: grid;
@@ -165,7 +167,7 @@
             line-height: 2;
             color: #7a8d99;
             font-size: 1.1rem;
-            margin-bottom: 2rem;
+            margin-bottom: 3rem;
         }
         .about-link{
             font-size: 1.8rem;
@@ -213,14 +215,64 @@
        padding: 15px;
        border-radius: 30px;
        margin: 0 auto;
+       margin-bottom: 80px;
     }
-    .food-slider{
+    .container{
         width: 100%;
         max-width: 1500px;
+        position: relative;
+
+    }
+    .left-btn, .right-btn{
+        background: #ad9103;
+        color: white;
+        height: 50px;
+        width: 50px;
+        position: absolute;
+        top: calc(50% - 25px);
+        z-index: 5;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+            }
+        .left-btn{
+            left: -35px;
+        }
+        .right-btn{
+            right: -35px;
+        }
+    .food-slider{
+        width: 100%;
+        font-size: 0;
+        overflow: hidden;
+        position: relative;
+        .sliding-system{
+            white-space: nowrap;
+            transform: translate3d(0%, 0, 0);
+        }
         .slide{
             width: 20%;
             position: relative;
             height: 500px;
+            cursor: pointer;
+            display: inline-block;
+            white-space: normal;
+            &:hover{
+                .background{
+                    background: #ddbc33;
+                    transform: translate3d(0, -250px, 0)
+                }
+                .content{
+                    .food-title{
+                        color: white;
+                    }
+                    .food-description{
+                        color: white;
+                    }
+
+                }
+            }
             .background{
                 background: white;
                 top: 0;
@@ -229,6 +281,7 @@
                 width: 100%;
                 z-index: 1;
                 position: absolute;
+                transition: transform .3s ease-in-out;
             }
             .content{
                 position: absolute;
@@ -238,11 +291,13 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                transition: all .3s ease-in-out;
                 .food-title{
                     color: #ad9103;
                     font-size: 2rem;
                     font-weight: 600;
                     margin-bottom: 3rem;
+                    // transition: all .3s ease-in-out;
                 }
                 .food-description{
                     font-size: .8rem;
@@ -264,5 +319,7 @@
         font-weight: 600;
         margin-bottom: 20px;
         text-align: center;
+        text-transform: capitalize;
+        margin-bottom: 2rem;
         }
 }
